--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 beautifulsoup4==4.11.1
-Flask==2.2.0
+Flask==2.2.2
 numpy==1.24.1
 pandas==1.5.3
 requests==2.28.2
+spacy==3.5.0
+sklearn==0.0.post1
